# battleship-cpp

./: .gitignore  CMakeLists.txt  README.md  buildpipeline-make.yml  buildpipeline.yml  dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
Battleship.Ascii.Lib/: Colours.cpp  Colours.h  Program.cpp  Program.h
Battleship.Ascii.Tests/: ParsePositionTests.cpp
Battleship.Ascii.Tests.CppUnit/: ParsePositionTests.cpp  ParsePositionTests.h
Battleship.GameController.Lib/: GameController.cpp  GameController.h  Letters.cpp  Letters.h  Position.cpp  Position.h  Ship.cpp  Ship.h
Battleship.GameController.Tests/: CheckIsHitTests.cpp  IsShipValidTests.cpp
Battleship.GameController.Tests.CppUnit/: TestRunner.cpp
MAKE/: cpptestresults.xml  makefile
tests/: CheckIsHitTests.cpp  CheckIsHitTests.h  IsShipValidTests.h  ParsePositionTests.cpp  ParsePositionTests.h  TestRunner.cpp
